[package]
name = "rusthub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
once_cell = "1.16.0"
lazy_static = "1.4.0"
crossterm = "0.25.0"
rand = "0.8.5"
prettycli = "0.1.1"
colored = "2.0.0"
