[package]
name = "rusthub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
once_cell = "1.16.0"
lazy_static = "1.4.0"
crossterm = "0.26.1"
rand = "0.8.5"
prettycli = "0.1.1"
colored = "2.0.0"
rayon = "1.6.1"
#rayon = {version = "1.6.1", optional = true}
ndarray = {version = "0.15.6", features = ["rayon"]}
#tokio = "1.28.0"
num_cpus = "1.14.0"
futures = "0.3"
itertools = "0.10.5"
